interpreter almost done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,17 @@ add_executable(${PROJECT_NAME}
 	${DIR}/src/syntax/LiteralExpr.h
 	${DIR}/src/syntax/AstPrinter.h
 	${DIR}/src/syntax/AstPrinter.cpp
+	${DIR}/src/syntax/ExprVisitor.h
 	
 	${DIR}/src/parser/Parser.h
 	${DIR}/src/parser/Parser.cpp
 	${DIR}/src/parser/ParseError.h
 	
-	${DIR}/src/interpreter/LoxType.h)
+	${DIR}/src/interpreter/LoxType.h
+	${DIR}/src/interpreter/LoxValueExprVisitor.h
+	${DIR}/src/interpreter/RuntimeError.h
+	${DIR}/src/interpreter/Interpreter.h
+	${DIR}/src/interpreter/Interpreter.cpp)
 	
 set_target_cpp_standard(${PROJECT_NAME} 17)
 
