--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_executable(${PROJECT_NAME}
 	${DIR}/src/interpreter/LoxCallable.h
 
 	${DIR}/src/nativefuncs/TimeFunc.h
+	${DIR}/src/nativefuncs/SlurFunc.h
 
 	${DIR}/src/interpreter/RuntimeError.h
 	${DIR}/src/interpreter/Interpreter.h
